# servicio_notificaciones

./: .env.example  .gitignore  Containerfile  PODMAN.md  pyproject.toml
src/servicio_notificaciones/app/: main.py
src/servicio_notificaciones/app/api/routes/: email.py  sms.py
src/servicio_notificaciones/app/core/: config.py  security.py
src/servicio_notificaciones/app/schemas/: email.py  sms.py
src/servicio_notificaciones/app/services/: email_service.py  sms_service.py
src/servicio_notificaciones/app/utils/: email_renderer.py  qr.py
src/servicio_notificaciones/app/utils/email_templates/: checkout_receipt.html  reservation_confirmation.html
